--- a/WebShopBackend/WebShopBackend.csproj
+++ b/WebShopBackend/WebShopBackend.csproj
@@ -10,4 +10,12 @@
     <ProjectReference Include="..\WebShopShared\WebShopShared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
+  </ItemGroup>
+
 </Project>
