--- a/WebShopFrontend/WebShopFrontend.csproj
+++ b/WebShopFrontend/WebShopFrontend.csproj
@@ -14,4 +14,8 @@
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.3.0" />
+  </ItemGroup>
+
 </Project>
